--- a/projet/login/login.css
+++ b/projet/login/login.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0;
     width: 80%;
     height: auto;
     margin-left: 9%;
@@ -238,5 +239,12 @@ form{
 .erro{
     color: red;
     display: none;
+}
+.loading{
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    width: 100%;
+    height: 100%;
+    
 }
 
