--- a/projet/register/cadastrar.css
+++ b/projet/register/cadastrar.css
@@ -17,13 +17,11 @@ body{
 }
 .back{
     background: #0000002d;
-    width: 500px;
+    width: 40%;
     border-radius: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.521);
-    margin-bottom: 100px;
 }
 
 .infor{
@@ -80,19 +78,23 @@ body{
 }
 .imp1 input{
     padding: 10px;
-
 }
 .imp1{
     display: flex;
 }
 .imputes{
     margin-right: 30px;
+    margin-left: 25px;
 }
 .imppw{
-    margin-bottom: 28px;
+    float: left;
+    display: flex;
 }
 .buttoncadastra{
-    margin-bottom: 80px;
+    margin-bottom: 50px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
 }
 .buttoncadastra button{
     border: none;
@@ -103,6 +105,7 @@ body{
     height: 30px;
     margin-right: 10px;
     background-color: transparent;
+    margin-left: 20px;
 }
 .buttoncadastra button:hover{
     background: #000000;
@@ -192,4 +195,7 @@ body{
     color: red;
     display: none;
 }
-
+.tituloimp{
+    margin-top: 20px;
+    margin-left: 5%;
+}
