--- a/projet/home/home.css
+++ b/projet/home/home.css
@@ -1,13 +1,22 @@
+@media screen and (max-width:800px) {
+    .left  , .main, .right {width:100%;}
+}
 body{
+    width: 100%;
+    height: auto;
+}
+/*header*/
+header{
+    width: 100%;
+    height: 110px;
+}
+.topo{
     width: 80%;
     height: auto;
     margin-left: 9%;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Courier New', Courier, monospace;    
 }
-
 .topo{
-    width: 100%;
-    height: auto;
     display: flex;
 }
 .ing{
@@ -46,3 +55,184 @@ body{
     box-shadow: 3px 3px 5px black;
     transition: 250ms;
 }
+
+/* aside */
+.left{
+    background-color:#20010100;
+    padding:20px;
+    float: left;
+    width:17%;
+    border-radius: 8px;
+    height: 2300px;
+}
+.colant{
+    position: sticky;
+    top: 0;
+}
+.img-colab{
+    border-radius: 150px;
+    width: 70px;
+}
+
+/*apartir daqui e o main*/
+.center{
+    background-color:#f1f1f1;
+    padding:20px;
+    float:left;
+    width:57%; 
+    
+}
+.imgCortes{
+    display: flex;
+}
+.imginicio{
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid #00000049;
+    box-shadow: 2px 2px 5px #000000b0 ;
+}
+.ft1{
+    width: 98%;
+    border-radius: 8px;
+    border: 1px solid #00000049;
+    box-shadow: 2px 2px 5px #000000b0 ;
+    
+}
+.ft2{
+    width: 98%;
+    border-radius: 8px;
+    border: 1px solid #00000049;
+    box-shadow: 2px 2px 5px #000000b0 ;
+}
+.ft3{
+    width: 98%;
+    border-radius: 8px;
+    border: 1px solid #00000049;
+    box-shadow: 2px 2px 5px #000000b0 ;
+}
+.descriço{
+    display: flex;
+}
+.total{
+    display: flex;
+}
+.imglr{
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid #00000049;
+    box-shadow: 2px 2px 5px #000000b0 ;
+    margin-left: 30px;
+}
+.divimg1{
+    margin-right: 20px;
+}
+.sobracelha{
+    display: flex;
+}
+.imgsobra1{
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid #00000049;
+    box-shadow: 2px 2px 5px #000000b0 ;
+}
+.imgsobra2{
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid #00000049;
+    box-shadow: 2px 2px 5px #000000b0 ;
+    margin-left: 30px;
+}
+.divtext{
+    display: flex;
+}
+
+.totalfim{
+    width: 100%;
+    height: auto;
+    margin-top: 30px;
+}
+.namesite{
+    display: flex;
+    width: 100%;
+}
+.namesite img{
+    width: 100px;
+    height: auto;
+    margin-right: 10px;
+}
+.fimsite{
+    display: flex;
+}
+.buttonfim button{
+    border: none;
+   font-size: 15px;
+   cursor: pointer;
+   border-radius: 5px;
+   margin-bottom: 35px;
+   height: 30px;
+   width: auto;
+   margin-right: 90px;
+   margin-top: 30px;
+   font-size: 20px;
+}
+.buttonfim button:hover{
+   background: #000000;
+   color: #fff;
+   box-shadow: 3px 3px 5px black;
+   transition: 250ms;
+}
+.redes{
+    display: flex;
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.instagem img{
+    width: 30px;
+    height: auto;
+    margin-left: 20px;
+}
+.facebook img{
+    width: 30px;
+    height: auto;
+    margin-left: 20px;
+}
+.whats img{
+    width: 30px;
+    height: auto;
+    margin-left: 20px;
+}
+.youtube img{
+    width: 30px;
+    height: auto;
+    margin-bottom: 30px;
+}
+.footermain{
+    margin-top: 50px;
+}
+
+
+/*right*/
+.right{
+    padding:20px;
+    float:right;
+    width:20%;
+}
+.aside-right{
+    background-color: #af4c4c11;
+    padding: 20px;
+    width: 17%;
+    height: 100%;
+    float: right;
+    border-radius: 8px;
+    margin-right: 8px;
+}
+.lista{
+    list-style-type:none;
+}
+
+
+
+
+
