--- a/projet/home/home.css
+++ b/projet/home/home.css
@@ -4,25 +4,41 @@
 body{
     width: 100%;
     height: auto;
+    margin: 0;
+    line-height: 1.6;
+    font-family: 'Courier New', Courier, monospace;
+
 }
+
+
 /*header*/
-header{
-    width: 100%;
-    height: 110px;
+
+.topo {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 5px;
 }
-.topo{
-    width: 80%;
-    height: auto;
-    margin-left: 9%;
-    font-family: 'Courier New', Courier, monospace;    
+
+header {
+    background-color: #222222f3;
+    color: #fff;
+    padding: 1rem 0;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
-.topo{
+
+header .topo {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .ing{
-    width: 100px;
+    width: 60px;
     height: auto;
-    margin-left: 30px;  
+    margin-left: 30px;
+    border-radius: 40px;  
 }
 .infor{
     display: flex;
@@ -32,38 +48,56 @@ header{
 }
 .infor button{
     border: none;
-    font-size: 15px;
+    font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
     width: auto;
     height: 30px;
     margin-right: 10px;
     background-color: transparent;
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace;
 }
 .infor button:hover{
-    background: #000000;
-    color: #fff;
+    background: #e44d26;
+    color: #000000;
+    box-shadow: 3px 3px 5px black;
+    transition: 250ms;
+}
+.contato button{
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: auto;
+    height: 30px;
+    margin-right: 10px;
+    background-color: #e44d26;
+    color: #fffefe;
+}
+.contato button:hover{
+    background: #c83d1a;
+    color: #000000;
     box-shadow: 3px 3px 5px black;
     transition: 250ms;
 }
 
 /* aside */
 .left{
-    background-color:#20010100;
+    background-color:#00000000;
     padding:20px;
     float: left;
     width:17%;
-    border-radius: 8px;
     height: 2300px;
 }
-.colant{
-    position: sticky;
-    top: 0;
-}
+
 .img-colab{
     border-radius: 150px;
     width: 70px;
+    height: auto;
 }
+
+
 
 /*apartir daqui e o main*/
 .center{
@@ -102,6 +136,10 @@ header{
 }
 .descriço{
     display: flex;
+    margin-bottom: 70px;
+}
+.titulo h1{
+    margin-top: 0;
 }
 .total{
     display: flex;
@@ -143,7 +181,11 @@ header{
 }
 .namesite{
     display: flex;
-    width: 100%;
+    width: 60%;
+    margin-left: 13%;
+}
+.cor{
+    color: #fff;
 }
 .namesite img{
     width: 100px;
@@ -155,18 +197,19 @@ header{
 }
 .buttonsab button{
     border: none;
-   font-size: 15px;
-   cursor: pointer;
-   border-radius: 5px;
-   margin-bottom: 20px;
-   height: 30px;
-   width: auto;
-   margin-right: 90px;
-   margin-top: 30px;
-   font-size: 18px;
+    font-size: 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    height: 40px;
+    width: 150px;
+    margin-top: 20px;
+    font-size: 18px;
+    background-color: #e44d26;
+    color: #000;
 }
 .buttonsab button:hover{
-   background: #000000;
+   background: #c83d1a;
    color: #fff;
    box-shadow: 3px 3px 5px black;
    transition: 250ms;
@@ -177,7 +220,6 @@ header{
     margin-left: 20px;
     margin-bottom: 10px;
 }
-
 .instagem img{
     width: 30px;
     height: auto;
@@ -199,9 +241,12 @@ header{
     margin-bottom: 30px;
 }
 .footermain{
+    width: 100%;
     margin-top: 50px;
+    background-color: #222;
+    position: relative;
+    display: flex;
 }
-
 
 /*right*/
 .right{
