--- a/projet/login/login.css
+++ b/projet/login/login.css
@@ -1,21 +1,32 @@
 body{
+    width: 100%;
+    height: auto;
+    margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+}
+.body{
     margin: 0;
     width: 80%;
     height: auto;
     margin-left: 9%;
     font-family: 'Courier New', Courier, monospace;
 }
-
+header{
+    background-color: #222;
+}
 .topo{
-    width: 100%;
+    width: 70%;
+    margin-left: 10%;
     height: auto;
     display: flex;
+    
 }
 .ing{
-    width: 100px;
+    width: 80px;
     height: auto;
     margin-left: 30px;
-    
+    margin-top: 5px;
+    border-radius: 50px;
 }
 .infor{
     display: flex;
@@ -25,21 +36,41 @@ body{
 }
 .infor button{
     border: none;
-    font-size: 15px;
+    font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
     width: auto;
     height: 30px;
-    margin-right: 10px;   
+    margin-right: 10px;
+    background-color: transparent;
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace;
 }
 .infor button:hover{
-    background: #000000;
-    color: #fff;
+    background: none;
+    color: #615f5f;
+    transition: 250ms;
+}
+.contato button{
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: auto;
+    height: 30px;
+    margin-right: 10px;
+    background-color: #e44d26;
+    color: #332929;
+    font-family: 'Courier New', Courier, monospace;
+}
+.contato button:hover{
+    background: #be3613;
+    color: #000000;
     box-shadow: 3px 3px 5px black;
     transition: 250ms;
 }
 .back{
-    background: #00000049;
+    background: #222222ad;
     width: 450px;
     border-radius: 20px;
     display: flex;
@@ -245,6 +276,30 @@ form{
     display: flex;
     width: 100%;
     height: 100%;
-    
 }
+.container{
+    background: #222;
+    display: flex;
+    width: 100%;
+    height: 90px;
+    margin-top: 80px;
+    justify-content: center;
+    color: #fff;
+}
+.container p{
+    margin-top: 40px;
+    margin-right: 300px;
+}
+.container a img{
+    width: 40px;
+    height: auto;
+    margin-top: 30px;
+}
+.container a img:hover{
+    width: 43px;
+    height: auto;
+    margin-top: 30px;
+    transition: 250ms;
+}
+
 
