--- a/projet/home/home.css
+++ b/projet/home/home.css
@@ -1,13 +1,12 @@
 @media screen and (max-width:800px) {
-    .left  , .main, .right {width:100%;}
+    .left, .main, .right {width:100%;}
 }
 body{
     width: 100%;
     height: auto;
     margin: 0;
     line-height: 1.6;
-    font-family: 'Courier New', Courier, monospace;
-
+    font-family: 'sans-serif';
 }
 
 
@@ -46,57 +45,35 @@ header .topo {
     margin-left: 67%;
     margin-top: 17px;
 }
-.infor button{
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 5px;
-    width: auto;
-    height: 30px;
-    margin-right: 10px;
-    background-color: transparent;
-    color: #fff;
-    font-family: 'Courier New', Courier, monospace;
-}
-.infor button:hover{
-    background: #e44d26;
-    color: #000000;
-    box-shadow: 3px 3px 5px black;
-    transition: 250ms;
-}
-.contato button{
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 5px;
-    width: auto;
-    height: 30px;
-    margin-right: 10px;
-    background-color: #e44d26;
-    color: #fffefe;
-}
-.contato button:hover{
-    background: #c83d1a;
-    color: #000000;
-    box-shadow: 3px 3px 5px black;
-    transition: 250ms;
-}
 
 /* aside */
-.left{
-    background-color:#00000000;
-    padding:20px;
-    float: left;
+aside{
     width:17%;
-    height: 2300px;
+    height: max-content;
+    position: relative;
+    float: left;
+    padding: 20px;
 }
+.left{
+    background-color:#00000017;    
+    box-shadow: 2px 2px 5px #0000001e ;
+    border-radius: 8px;  
+}
+
+.decoret{
+    text-decoration: none;
+    color: #000;
+    display: flex;
+    margin-bottom: 20px;
+}
+
 
 .img-colab{
     border-radius: 150px;
-    width: 70px;
+    width: 80px;
     height: auto;
+    margin-right: 15px;
 }
-
 
 
 /*apartir daqui e o main*/
@@ -105,6 +82,7 @@ header .topo {
     padding:20px;
     float:left;
     width:57%; 
+    margin-bottom: 6%;
 }
 .imgCortes{
     display: flex;
@@ -214,6 +192,16 @@ header .topo {
    box-shadow: 3px 3px 5px black;
    transition: 250ms;
 }
+
+
+/*footer*/
+.footermain{
+    width: 100%;
+    height: auto;
+    background-color: #222;
+    position: relative;
+    display: flex;
+}
 .redes{
     display: flex;
     margin-top: 30px;
@@ -240,22 +228,16 @@ header .topo {
     height: auto;
     margin-bottom: 30px;
 }
-.footermain{
-    width: 100%;
-    margin-top: 50px;
-    background-color: #222;
-    position: relative;
-    display: flex;
-}
 
 /*right*/
 .right{
     padding:20px;
     float:right;
     width:20%;
+    height: 100%;
 }
 .aside-right{
-    background-color: #af4c4c11;
+    background-color: #22222210;
     padding: 20px;
     width: 17%;
     height: 100%;
@@ -267,6 +249,35 @@ header .topo {
     list-style-type:none;
 }
 
+/* Adaptações para telas menores */
+@media (max-width: 768px) {
+    .container {
+        padding: 15px;
+    }
+
+    header .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header h1 {
+        margin-bottom: 10px;
+    }
+
+    header nav ul {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    header nav ul li {
+        margin: 10px 0;
+    }
+
+    .hero .container {
+        flex-direction: column;
+        text-align: center
+    }
+}
 
 
 
