--- a/projet/login/login.css
+++ b/projet/login/login.css
@@ -1,9 +1,4 @@
-body{
-    width: 100%;
-    height: auto;
-    margin: 0;
-    font-family: 'Courier New', Courier, monospace;
-}
+
 .body{
     margin: 0;
     width: 80%;
@@ -277,29 +272,35 @@ form{
     width: 100%;
     height: 100%;
 }
-.container{
-    background: #222;
-    display: flex;
-    width: 100%;
-    height: 90px;
-    margin-top: 80px;
-    justify-content: center;
-    color: #fff;
-}
-.container p{
-    margin-top: 40px;
-    margin-right: 300px;
-}
-.container a img{
-    width: 40px;
-    height: auto;
-    margin-top: 30px;
-}
-.container a img:hover{
-    width: 43px;
-    height: auto;
-    margin-top: 30px;
-    transition: 250ms;
-}
 
+
+/* Adaptações para telas menores */
+@media (max-width: 768px) {
+    .container {
+        padding: 15px;
+    }
+
+    header .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header h1 {
+        margin-bottom: 10px;
+    }
+
+    header nav ul {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    header nav ul li {
+        margin: 10px 0;
+    }
+
+    .hero .container {
+        flex-direction: column;
+        text-align: center
+    }
+}
 
