--- a/projet/agendamento/agendamento.css
+++ b/projet/agendamento/agendamento.css
@@ -3,3 +3,16 @@
     height: auto;
     margin-left: 15%;
 }
+
+/* header */
+.ing{
+    width: 70px;
+    height: 55px;
+    margin-top: 15px;
+    margin-right: 10px;
+}
+.perfil a{
+    display: flex;
+    text-decoration: none;
+    color: rgb(253, 243, 243);
+}
