--- a/projet/register/cadastrar.css
+++ b/projet/register/cadastrar.css
@@ -90,7 +90,7 @@ header nav ul li button:hover {
 }
 .back{
     background: #0000002d;
-    width: 40%;
+    width: 500PX;
     border-radius: 20px;
     display: flex;
     justify-content: center;
@@ -203,6 +203,7 @@ header nav ul li button:hover {
 .fimsite{
     display: flex;
 }
+
 .buttonfim button{
     border: none;
    font-size: 15px;
