--- a/projet/global/glob.css
+++ b/projet/global/glob.css
@@ -6,11 +6,10 @@ body {
     font-family: 'sans-serif';
 }
 
-
 /*header*/
 
 header {
-    background-color: #222222f3;
+    background: linear-gradient(135deg ,#e45b00, #000000, #000000d8);
     color: #fff;
     position: sticky;
     top: 0;
@@ -85,7 +84,7 @@ header .topo {
 /*footer*/
 
 footer {
-    background-color: #222222f3;
+    background: linear-gradient(135deg, #000000, #000000d8 ,#e45b00);
     color: #fff;
     padding: 30px 0;
     text-align: center;
