--- a/home/newHome.css
+++ b/home/newHome.css
@@ -1,9 +1,3 @@
-/*geral*/
-
-/*header*/
-
-
-/*main*/
 ol{
     list-style-type: none;
     padding: 0;
@@ -52,11 +46,12 @@ d{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body {
-    background-color: #f5f5f5;
+body{
+    background: #f5f5f5;
+    background: linear-gradient(135deg, var(--primary), var(--tercearia) ,var(--secondary));
     color: #333;
     line-height: 1.6;
-}
+} 
 
 .container {
     max-width: 1200px;
@@ -119,6 +114,12 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     padding: 25px;
     transition: transform 0.3s ease;
+    overflow: auto;
+    overflow-x: auto;
+    overflow-y: auto;
+    max-height: 550px;
+    scrollbar-width: thin;
+    scrollbar-color: var(--secondary) #eee;
 }
 
 .card:hover {
@@ -127,12 +128,22 @@ header {
 }
 
 .card-header {
-    display: flex;
     justify-content: space-between;
+    display: flex;
     align-items: center;
     margin-bottom: 20px;
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
+}
+
+.card-header::-webkit-scrollbar {
+    height: 6px;
+    width: 6px;
+    background: #eee;
+}
+.card-header::-webkit-scrollbar-thumb {
+    background: var(--secondary);
+    border-radius: 4px;
 }
 
 .card-title {
