--- a/newindex/newindex.css
+++ b/newindex/newindex.css
@@ -185,6 +185,7 @@ header nav ul li button:hover {
 .servicos h2 {
     font-size: 2.5rem;
     margin-bottom: 40px;
+    color: white;
 }
 
 .servicos-lista {
@@ -271,13 +272,15 @@ header nav ul li button:hover {
 
 .contato {
     padding: 80px 0;
-    background-color: #f9f9f9;
+    background-color: var(--primary);
     text-align: center;
+
 }
 
 .contato h2 {
     font-size: 2.5rem;
     margin-bottom: 30px;
+    
 }
 
 .contato-info {
